--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:layout_marginEnd="79dp"
         android:layout_marginBottom="126dp"
         android:onClick="btnorta"
-        android:text="Button"
+        android:text="ORTA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/iyi"
         app:layout_constraintStart_toEndOf="@+id/kotu"
@@ -42,7 +42,7 @@
         android:layout_marginEnd="44dp"
         android:layout_marginBottom="126dp"
         android:onClick="btniyi"
-        android:text="Button"
+        android:text="İYİ"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
